# aardvark

./: CHANGELOG.md  Cargo.toml  LICENSE-THIRDPARTY.json  LICENSE.md  README.md  THIRDPARTY.json  build.rs
.github/workflows/: check-release.yml  test-ci.yml
docs/: compare.md  install.md  merge.md  methods.md  performance.md  recommended_settings.md  user_guide.md
src/: exact_gt_optimizer.rs  lib.rs  main.rs  merge_solver.rs  query_optimizer.rs  waffle_solver.rs
src/cli/: compare.rs  core.rs  merge.rs  mod.rs
src/data_types/: compare_benchmark.rs  compare_region.rs  grouped_metrics.rs  merge_benchmark.rs  mod.rs  multi_region.rs  phase_enums.rs  summary_metrics.rs  variant_metrics.rs  variants.rs
src/dwfa/: dynamic_wfa.rs  haplotype_dwfa.rs  mod.rs
src/parsing/: mod.rs  noodles_helper.rs  region_generation.rs  stratifications.rs
src/util/: json_io.rs  mod.rs  progress_bar.rs  sequence_alignment.rs
src/writers/: compare_parallel.rs  merge_summary.rs  mod.rs  noodles_idx.rs  region_sequence.rs  region_summary.rs  summary.rs  variant_categorizer.rs  variant_merger.rs
test_data/example_stratification/: example1.bed  example2.bed  strat.tsv
