[package]
name = "aardvark"
version = "0.5.2"
edition = "2021"
license = "MIT"
description = "Aardvark - A tool for sniffing out the differences in vari-Ants"
homepage = "https://github.com/PacificBiosciences/aardvark"
repository = "https://github.com/PacificBiosciences/aardvark"
readme = "README.md"

[build-dependencies]
vergen-gitcl = { version = "1.0.5", features = ["build"] }

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
csv = "1.3.1"
derive_builder = "0.20.2"
env_logger = "0.11.8"
exitcode = "1.1.2"
flate2 = "1.1.1"
indexmap = "2.9.0"
indicatif = {version = "0.17.11", features = ["rayon"]}
lazy_static = "1.5.0"
log = "0.4.27"
noodles = { version = "0.96.0", features = ["bed", "bgzf", "core", "tabix", "vcf"] }
noodles-util = { version = "0.65.0", features = ["variant"] }
priority-queue = "2.3.1"
rayon = "1.10.0"
rust-lib-reference-genome = { tag = "v0.2.0", git = "https://github.com/holtjma/rust-lib-reference-genome.git" }
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"

[dev-dependencies]
approx_eq = "0.1.8"

[profile.release]
lto = "fat"
codegen-units = 1
